增加my_printf，删除无用代码

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "*.c": "c",
-        "common.h": "c"
+        "common.h": "c",
+        "oled_6448.h": "c"
     }
 }
